Refactor app structure and logic